# skillguard

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  action.yml  package-lock.json  package.json  tsconfig.json
.github/workflows/: ci.yml
docs/: concepts.md  getting-started.md
docs/integrations/: ci.md  mcp.md
examples/clean-skill/: SKILL.md
examples/clean-skill-python/: SKILL.md
examples/clean-skill-python/hooks/: format_greeting.py
examples/clean-skill/hooks/: greet.js
examples/known-bad-skill/: SKILL.md
examples/known-bad-skill/hooks/: backdoor.py  cleanup.sh  install.sh  obfuscated.js  postinstall.js
examples/known-name-legit-skill/: SKILL.md
examples/skill-set-clean/formatter/: SKILL.md
examples/skill-set-clean/formatter/hooks/: format_greeting.py
examples/skill-set-clean/greeter/: SKILL.md
examples/skill-set-cross-privilege/report-uploader/: SKILL.md
examples/skill-set-cross-privilege/report-uploader/hooks/: upload.py
examples/skill-set-cross-privilege/vault-reader/: SKILL.md
examples/skill-set-cross-privilege/vault-reader/hooks/: read_config.sh
examples/typosquat-skill/: SKILL.md
examples/typosquat-skill/hooks/: greet.js
python/: LICENSE  README.md  pyproject.toml
python/examples/: README.md
python/examples/01-basic-scan/: scan.py
python/examples/02-ci-gate/: gate.py
python/examples/03-agent-native-json/: agent_report.py
python/src/skillguard/: __init__.py  cli.py  errors.py  mcp_server.py  types.py  walker.py
python/src/skillguard/output/: formatters.py
python/src/skillguard/rulepacks/: loader.py  manifest_schema.py
python/src/skillguard/rulepacks/data/sg01-network-mismatch/: rules.yml
python/src/skillguard/rulepacks/data/sg02-remote-code-exec/: pack.json
python/src/skillguard/rulepacks/data/sg03-file-scope-escalation/: rules.yml
python/src/skillguard/rulepacks/data/sg04-hook-supply-chain/: pack.json
python/src/skillguard/rulepacks/data/sg05-obfuscated-payloads/: pack.json  rules.yml
python/src/skillguard/rulepacks/data/sg06-credential-harvesting/: pack.json
python/src/skillguard/rulepacks/data/sg07-frontmatter-spoofing/: pack.json
python/src/skillguard/rulepacks/data/sg10-marketplace-typosquatting/: known-names.json
python/src/skillguard/scan/: index.py  semgrep_runner.py  skill_set.py
python/src/skillguard/structural/: frontmatter_behavior_diff.py  prompt_injection_scan.py  typosquatting_check.py
python/src/skillguard/suppress/: skillguardignore.py
python/tests/: conftest.py  test_cli.py  test_e2e.py  test_formatters.py  test_frontmatter_behavior_diff.py  test_loader.py  test_mcp_server.py  test_prompt_injection_scan.py  test_semgrep_runner.py  test_skill_set.py  test_skillguardignore.py  test_typosquatting_check.py  test_walker.py
rulepacks/sg01-network-mismatch/: pack.json
rulepacks/sg02-remote-code-exec/: rules.yml
rulepacks/sg03-file-scope-escalation/: pack.json
rulepacks/sg04-hook-supply-chain/: rules.yml
rulepacks/sg05-obfuscated-payloads/: rules.yml
rulepacks/sg06-credential-harvesting/: rules.yml
rulepacks/sg08-prompt-injection/: pack.json
rulepacks/sg09-cross-skill-chaining/: pack.json
rulepacks/sg10-marketplace-typosquatting/: known-names.json  pack.json
src/: cli.test.ts  cli.ts  errors.ts  index.ts  types.ts  walker.test.ts  walker.ts
src/ast/: cross-skill-chaining.test.ts  cross-skill-chaining.ts  frontmatter-behavior-diff.test.ts  frontmatter-behavior-diff.ts  prompt-injection-scan.test.ts  prompt-injection-scan.ts  typosquatting-check.test.ts  typosquatting-check.ts
src/mcp/: server.test.ts  server.ts
src/output/: formatters.test.ts  formatters.ts
src/rulepacks/: loader.test.ts  loader.ts  manifest-schema.ts
src/scan/: index.e2e.test.ts  index.test.ts  index.ts  semgrep-runner.test.ts  semgrep-runner.ts  skill-set.e2e.test.ts  skill-set.test.ts  skill-set.ts
src/scan/structural/: index.test.ts  index.ts  sg07.ts  sg08.test.ts  sg08.ts  sg09.test.ts  sg09.ts  sg10.test.ts  sg10.ts
src/suppress/: skillguardignore.test.ts  skillguardignore.ts
