[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "skillguard-cli"
version = "0.1.2"
description = "Security scanner for third-party AI agent-skill files: SKILL.md manifests, hooks, and bundled scripts."
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
authors = [
  { name = "Rudrendu Paul" },
  { name = "Sourav Nandy" },
]
keywords = ["security", "ai-agents", "skill-scanner", "sast", "supply-chain", "static-analysis", "cli", "sarif"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Security",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
  "PyYAML>=6.0,<7",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0,<9",
  "build>=1.0,<2",
  "twine>=5.0,<7",
]

[project.urls]
Homepage = "https://github.com/RudrenduPaul/skillguard"
Repository = "https://github.com/RudrenduPaul/skillguard"
"Bug Tracker" = "https://github.com/RudrenduPaul/skillguard/issues"
Changelog = "https://github.com/RudrenduPaul/skillguard/blob/main/CHANGELOG.md"
Documentation = "https://github.com/RudrenduPaul/skillguard/blob/main/docs/getting-started.md"
"Author - Rudrendu Paul" = "https://github.com/RudrenduPaul"
"Author - Sourav Nandy" = "https://github.com/Sourav-nandy-ai"

[project.scripts]
skillguard = "skillguard.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/skillguard"]

[tool.hatch.build.targets.sdist]
include = [
  "src/skillguard",
  "tests",
  "README.md",
  "LICENSE",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
